# protein_annotator

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml  setup.cfg
docs/: about.md  index.md
src/protein_annotator/: __init__.py  __main__.py  __version__.py  annotator.py  blast.py  cli.py  homologs.py  main.py  parser.py  schemas.py  tools.py
src/protein_annotator/annotate_dbs/: biolip_query_annotate.py  parse_prote_txt.py  uniprot_querys_api.py  uniprot_querys_db.py
src/protein_annotator/annotations/: annotator.py  biolip.py  dbs.py  uniprot.py
src/protein_annotator/uniprot/: parse_prote_txt.py  uniprot_querys_api.py  uniprot_querys_db.py
tests/: test_homologs.py  test_main.py  test_parser.py
tests/data/: blast.xml  nucleotide.fasta  query.fasta  uniprot.json  uniprot.xml
